discussion/kv_engine/188207/188207_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add support for using castore in test programs

Change-Id: I0378daea2d2e043c22f7e540328e34ab6a37f05d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-15 11:33:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-15 12:13:09.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52401/ : ABORTED

Compile error at ..\kv_engine\programs\parse_tls_option.cc(25): error C2065: "optarg": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52401/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52401/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43955/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/programs/parse_tls_option.cc:25:31:
error: use of undeclared identifier "optarg"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43955/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22943/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/parse_tls_option.cc:25:31: error: use of undeclared identifier "optarg" [clang-diagnostic-error]
    auto parts = split_string(optarg, ",");
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/parse_tls_option.cc:27:14: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
        std::cerr << TerminalColor::Red
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/parse_tls_option.cc:41:18: error: no member named "cerr" in namespace "std" [clang-diagnostic-error]
            std::cerr << TerminalColor::Red << descr << " file " << file
                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22943/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/parse_tls_option.cc:25:31:
error: use of undeclared identifier "optarg" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22943/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12675/ : FAILURE

Compile error at [2023-03-15T11:34:31.173Z] ../kv_engine/programs/parse_tls_option.cc:25:31:
error: use of undeclared identifier "optarg"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12675/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23212/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1749/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12756/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/25007/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26323/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33425/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24592/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25469/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
